--- a/webapp/tileset-analyzer-app/package.json
+++ b/webapp/tileset-analyzer-app/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.0.3",
     "echarts-for-react": "^3.0.2",
     "localforage": "^1.10.0",
+    "maplibre-gl": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
