--- a/webapp/tileset-analyzer-app/package.json
+++ b/webapp/tileset-analyzer-app/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
