--- a/webapp/tileset-analyzer-app/package.json
+++ b/webapp/tileset-analyzer-app/package.json
@@ -3,28 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.8.0",
     "@cloudscape-design/components": "^3.0.199",
     "@cloudscape-design/global-styles": "^1.0.7",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.4",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "echarts-for-react": "^3.0.2",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
     "localforage": "^1.10.0",
-    "maplibre-gl": "^2.4.0",
-    "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.4",
+    "maplibre-gl": "^5.13.0",
+    "match-sorter": "^8.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
-    "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4",
-    "zustand": "^4.3.3"
+    "typescript": "^4.9.5",
+    "web-vitals": "^5.1.0",
+    "zustand": "^5.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +52,6 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.57.1"
+    "sass": "^1.94.2"
   }
 }
