--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,23 @@
-name: Create a new patch release
-on: workflow_dispatch
+name: Create a new release
+on:
+  workflow_dispatch:
+    inputs:
+      bump_type:
+        description: 'Version bump type'
+        required: true
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
+        default: 'patch'
 jobs:
   github:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Create new patch release
-        run: .github/scripts/release.py
+      - name: Create new ${{ inputs.bump_type }} release
+        run: .github/scripts/release.py ${{ inputs.bump_type }}
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
