fix(ci): configure GitHub token auth and fix package discovery
- Add GitHub token authentication to git remote in semantic-release job
- Fix package discovery in pyproject.toml to auto-discover all subpackages
- This resolves semantic-release push failures and package warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,11 @@ Homepage = "https://github.com/geoyogesh/tileset_analyzer"
 tileset_analyzer = "tileset_analyzer.main:cli"
 
 [tool.setuptools]
-packages = ["tileset_analyzer"]
 include-package-data = true
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["tileset_analyzer*"]
 
 [tool.setuptools.dynamic]
 version = {attr = "tileset_analyzer.__version__"}
