--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,7 @@ jobs:
           command: |
             git config user.name "semantic-release"
             git config user.email "semantic-release@circleci.com"
+            git remote set-url origin https://${GITHUB_TOKEN}@github.com/geoyogesh/TilesetAnalyzer.git
 
       - run:
           name: Install Python dependencies
