--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,7 +93,7 @@ allowed_tags = [
     "test",
 ]
 minor_tags = ["feat"]
-patch_tags = ["fix", "perf"]
+patch_tags = ["fix", "perf", "docs", "chore", "ci", "build", "style", "refactor", "test"]
 
 [tool.semantic_release.remote]
 name = "origin"
