--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,7 @@ patch_tags = ["fix", "perf", "docs", "chore", "ci", "build", "style", "refactor"
 name = "origin"
 type = "github"
 ignore_token_for_push = false
+token = { env = "GITHUB_TOKEN" }
 
 [tool.semantic_release.publish]
 dist_glob_patterns = ["dist/*"]
