--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ upload_to_pypi = false
 upload_to_release = true
 build_command = "pip install build && python -m build"
 major_on_zero = true
-commit_message = "chore(release): {version}"
+commit_message = "chore(release): {version}\n\n[skip ci]"
 
 [tool.semantic_release.branches.main]
 match = "main"
