fix(config): establish single source of truth for version management
- Remove hardcoded version from commitizen config (was 1.1.2, should be 2.0.1)
- Add version_provider = "pep621" to commitizen for dynamic version reading
- Remove version_toml from semantic-release config
- Keep tileset_analyzer/__init__.py:__version__ as the single source of truth

This prevents version conflicts and ensures all tools read from the same source.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,6 @@ include = ["tileset_analyzer*"]
 version = {attr = "tileset_analyzer.__version__"}
 
 [tool.semantic_release]
-version_toml = ["pyproject.toml:project.version"]
 version_variables = ["tileset_analyzer/__init__.py:__version__"]
 branch = "main"
 upload_to_pypi = false
@@ -202,10 +201,9 @@ known-third-party = ["fastapi", "pandas", "protobuf"]
 # Commitizen configuration
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "1.1.2"
+version_provider = "pep621"
 version_files = [
-    "tileset_analyzer/__init__.py:__version__",
-    "pyproject.toml:version"
+    "tileset_analyzer/__init__.py:__version__"
 ]
 update_changelog_on_bump = true
 tag_format = "$version"
